fix: testimonial overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,6 +55,6 @@ h4 {
 }
 
 .swiper {
-  width: 80%;
+  width: 100%;
   height: auto;
 }
